--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="row header">
+        <div class="container">
+            <header>
+                <div class="logo">
+                    <img src="./img/logo.svg" width="65" height="65">
+                </div>
+                <nav>
+                    <ul>
+                        <li><a class="nav-active" href="#">ГЛАВНАЯ</a></li>
+                        <li><a href="#">Портфолио</a></li>
+                        <li><a href="#">Услуги</a></li>
+                        <li><a href="#">Кейсы</a></li>
+                        <li><a href="#">Выступления</a></li>
+                        <li><a href="#">Блог</a></li>
+                    </ul>
+                </nav>
+                <div class="contacts__img">
+                    <a href="#"><img src="./img/youtube.svg" width="44" height="44"></a>
+                    <a href="#"><img src="./img/telegram.svg" width="44" height="44"></a>
+                    <a href="#"><img src="./img/f.svg" width="44" height="44"></a>
+                    <a href="#"><img src="./img/t.svg" width="44" height="44"></a>
+                </div>
+            </header>
+        </div>
+    </div>
 </body>
 </html>
