--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,23 +10,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <div class="row header">
         <div class="container">
             <header>
-                <div class="logo">
-                    <img src="./img/logo.svg" width="65" height="65">
+                <div class="header__block">
+                    <div class="logo">
+                        <img src="./img/logo.svg" width="65" height="65">
+                    </div>
+                    <nav>
+                        <ul>
+                            <li><a class="nav-active" href="#">ГЛАВНАЯ</a></li>
+                            <li><a href="#">Портфолио</a></li>
+                            <li><a href="#">Услуги</a></li>
+                            <li><a href="#">Кейсы</a></li>
+                            <li><a href="#">Выступления</a></li>
+                            <li><a href="#">Блог</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a class="nav-active" href="#">ГЛАВНАЯ</a></li>
-                        <li><a href="#">Портфолио</a></li>
-                        <li><a href="#">Услуги</a></li>
-                        <li><a href="#">Кейсы</a></li>
-                        <li><a href="#">Выступления</a></li>
-                        <li><a href="#">Блог</a></li>
-                    </ul>
-                </nav>
                 <div class="contacts__img">
                     <a href="#"><img src="./img/youtube.svg" width="44" height="44"></a>
                     <a href="#"><img src="./img/telegram.svg" width="44" height="44"></a>
@@ -36,4 +40,5 @@
         </div>
     </div>
 </body>
+
 </html>
