--- a/index.html
+++ b/index.html
@@ -39,6 +39,34 @@
             </header>
         </div>
     </div>
+
+    <div class="row row__hero">
+        <div class="container">
+            <div class="hero">
+                <div class="hero__block">
+                    <div class="hero__img">
+                        <img src="./img/hero.jpg" width="120" height="120">
+                    </div>
+                    <h1>
+                        Денис<br>
+                        Давыдов
+                    </h1>
+                    <div class="hero__info">
+                        Редактор, контент-маркетолог<br>
+                        <br>
+                        Живу в Воронеже, работаю удаленно<br>
+                        со всей страной как самозанятый
+                    </div>
+                </div>
+                <div class="hero__cursor">
+                    <div class="cursor__text">
+                        посмотрите<br>
+                        видео обо мне
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
