finish main page desktop version

--- a/index.html
+++ b/index.html
@@ -41,29 +41,142 @@
     </div>
 
     <div class="row row__hero">
+        <div class="background"></div>
         <div class="container">
             <div class="hero">
-                <div class="hero__block">
-                    <div class="hero__img">
-                        <img src="./img/hero.jpg" width="120" height="120">
+                <div class="hero__about">
+                    <div class="hero__block">
+                        <div class="hero__img">
+                            <img src="./img/hero.jpg" width="120" height="120">
+                        </div>
+                        <h1 class="hero__name">
+                            Денис<br>
+                            Давыдов
+                        </h1>
+                        <div class="hero__info">
+                            Редактор, контент-маркетолог<br>
+                            <br>
+                            Живу в Воронеже, работаю удаленно<br>
+                            со всей страной как самозанятый
+                        </div>
                     </div>
-                    <h1>
-                        Денис<br>
-                        Давыдов
-                    </h1>
-                    <div class="hero__info">
-                        Редактор, контент-маркетолог<br>
-                        <br>
-                        Живу в Воронеже, работаю удаленно<br>
-                        со всей страной как самозанятый
+                    <div class="hero__cursor">
+                        <div class="cursor__text">
+                            посмотрите<br>
+                            видео обо мне
+                        </div>
+                        <div class="cursor">
+                            <img src="./img/cursor.svg">
+                        </div>
                     </div>
                 </div>
-                <div class="hero__cursor">
-                    <div class="cursor__text">
-                        посмотрите<br>
-                        видео обо мне
+                <div class="hero__video__block">
+                    <img class="hero__video" src="./img/video.svg" width="1160" height="502">
+                    <a href="https://youtu.be/HLYsRavNTwM"><img class="video__play" src="./img/play.svg" width="47" height="47"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row row-alternative-color">
+        <div class="container">
+            <h1 class="title">Что я делал и делаю</h1>
+            <div class="activity">
+                <div class="activity__block">
+                    <img src="./img/process.jpg" width="360" height="360">
+                    <div class="activity__text">
+                        <h2 class="text__title">Выстраиваю редакции и процессы</h2>
+                        <div class="text__secondary__color">
+                            Делаю так, чтобы контент-маркетинг в компании работал<br> 
+                            и приносил результат. Нахожу людей, управляю<br> 
+                            процессами. 
+                        </div>
+                        <div class="text__main__color">
+                            Например, я собрал редакцию для блога Webinar Group.<br> 
+                            О крупных проектах <a class="activity__link" href="#">рассказываю в кейсах.</a>
+                        </div>
                     </div>
                 </div>
+                <div class="activity__block">
+                    <img src="./img/analysis.jpg" width="360" height="360">
+                    <div class="activity__text">
+                        <h2 class="text__title">
+                            Пишу, редактирую и анализирую контент
+                        </h2>
+                        <div class="text__secondary__color">
+                            Работаю с разными форматами. Могу написать письма для<br> 
+                            рассылки, сделать прототип лендинга или написать статью.
+                        </div>
+                        <div class="text__main__color">
+                            Например, я писал тест для лид-магнита<br> 
+                            в Webinar Group, статьи в Тинькоф-Журнал.
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__block">
+                    <img src="./img/conferention.jpg" width="360" height="360">
+                    <div class="activity__text">
+                        <h2 class="text__title">
+                            Выступаю на конференциях<br> 
+                            и провожу мастер-классы
+                        </h2>
+                        <div class="text__secondary__color">
+                            Выступал на Тургенев.Digital, Риф-Воронеж. Проводил<br> 
+                            мастер-класс для COMDI. Вел лекции и практику в<br>
+                            «Синергии», делал вебинары в агентстве SEMANTICA.
+                        </div>
+                        <div class="text__main__color">
+                            Все записи выкладываю на <a class="activity__link" href="https://www.youtube.com/@FreudMethod">свой YouTube-канал.</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__block">
+                    <img src="./img/consulting.jpg" width="360" height="360">
+                    <div class="activity__text">
+                        <h2 class="text__title">Консультирую и помогаю учиться</h2>
+                        <div class="text__secondary__color">
+                            Помогаю развиваться в своей профессии. Даю обратную<br> 
+                            связь, отвечаю на вопросы и рассказываю про свой опыт.
+                        </div>
+                        <div class="text__main__color">
+                            Узнать про консультации можно у меня <a class="activity__link" href="#">напрямую</a>,<br> 
+                            а можно через <a class="activity__link" href="#">Solvery.</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__block">
+                    <img src="./img/blog.jpg" width="360" height="360">
+                    <div class="activity__text">
+                        <h2 class="text__title">Веду свой блог</h2>
+                        <div class="text__secondary__color">
+                            Иногда пишу статьи про контент-маркетинг и редактуру,<br> 
+                            иногда делаю заметки про работу. 
+                        </div>
+                        <div class="text__main__color">
+                            А ещё веду «проекты для души».<br>
+                            Например, телеграм-канал <a class="activity__link" href="#">«Записки в лаваше».</a>                       
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container">
+            <div class="contacts">
+                <h1 class="title__contacts">Контакты</h1>
+                <div class="contacts__links">
+                    <a href="#"><img src="./img/youtube.svg" alt="YouTube" width="68" height="68"></a>
+                    <a href="#"><img src="./img/telegram.svg" width="68" height="68"></a>
+                    <a href="#"><img src="./img/f.svg" width="68" height="68"></a>
+                    <a href="#"><img src="./img/t.svg" width="68" height="68"></a>
+                </div>
+                <h2><a class="contacts__mail" href="#">mail@example.com</a></h2>
+            </div>
+            <div class="contacts__note">
+                *Meta признана экстремистской организацией
             </div>
         </div>
     </div>
