--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="logo">
                         <img src="./img/logo.svg" width="65" height="65">
                     </div>
-                    <nav>
+                    <nav class="nav__desktop">
                         <ul>
                             <li><a class="nav-active" href="#">ГЛАВНАЯ</a></li>
                             <li><a href="#">Портфолио</a></li>
@@ -36,6 +36,7 @@
                     <a href="#"><img src="./img/f.svg" width="44" height="44"></a>
                     <a href="#"><img src="./img/t.svg" width="44" height="44"></a>
                 </div>
+                <img class="burger" src="./img/burger.svg">
             </header>
         </div>
     </div>
@@ -53,11 +54,21 @@
                             Денис<br>
                             Давыдов
                         </h1>
+                        <h1 class="hero__name__mobile">
+                            Денис Давыдов
+                        </h1>
                         <div class="hero__info">
                             Редактор, контент-маркетолог<br>
                             <br>
                             Живу в Воронеже, работаю удаленно<br>
                             со всей страной как самозанятый
+                        </div>
+                        <div class="hero__info__mobile">
+                            Редактор, контент-маркетолог<br>
+                            <br>
+                            Живу в Воронеже, работаю<br>
+                            удаленно со всей страной как<br>
+                            самозанятый
                         </div>
                     </div>
                     <div class="hero__cursor">
@@ -72,7 +83,9 @@
                 </div>
                 <div class="hero__video__block">
                     <img class="hero__video" src="./img/video.svg" width="1160" height="502">
-                    <a href="https://youtu.be/HLYsRavNTwM"><img class="video__play" src="./img/play.svg" width="47" height="47"></a>
+                    <img class="hero__video__mobile" src="./img/video_mobile.svg" width="340" height="420">
+                    <a href="https://youtu.be/HLYsRavNTwM"><img class="video__play" src="./img/play.svg" width="47"
+                            height="47"></a>
                 </div>
             </div>
         </div>
@@ -82,18 +95,36 @@
     <div class="row row-alternative-color">
         <div class="container">
             <h1 class="title">Что я делал и делаю</h1>
+            <h1 class="title__mobile">
+                Что я делал<br>
+                и делаю
+            </h1>
             <div class="activity">
                 <div class="activity__block">
                     <img src="./img/process.jpg" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Выстраиваю редакции и процессы</h2>
+                        <h2 class="text__title__mobile">
+                            Выстраиваю редакции<br>
+                            и процессы
+                        </h2>
                         <div class="text__secondary__color">
-                            Делаю так, чтобы контент-маркетинг в компании работал<br> 
-                            и приносил результат. Нахожу людей, управляю<br> 
-                            процессами. 
+                            Делаю так, чтобы контент-маркетинг в компании работал<br>
+                            и приносил результат. Нахожу людей, управляю<br>
+                            процессами.
+                        </div>
+                        <div class="text__secondary__color__mobile">
+                            Делаю так, чтобы контент-<br>
+                            маркетинг в компании работал и<br>
+                            приносил результат. Нахожу<br>
+                            людей, управляю процессами.
                         </div>
                         <div class="text__main__color">
-                            Например, я собрал редакцию для блога Webinar Group.<br> 
+                            Например, я собрал редакцию для блога Webinar Group.<br>
+                            О крупных проектах <a class="activity__link" href="#">рассказываю в кейсах.</a>
+                        </div>
+                        <div class="text__main__color__mobile">
+                            Например, я собрал редакцию для блога Webinar Group.<br>
                             О крупных проектах <a class="activity__link" href="#">рассказываю в кейсах.</a>
                         </div>
                     </div>
@@ -104,13 +135,28 @@
                         <h2 class="text__title">
                             Пишу, редактирую и анализирую контент
                         </h2>
+                        <h2 class="text__title__mobile">
+                            Пишу, редактирую и<br>
+                            анализирую контент
+                        </h2>
                         <div class="text__secondary__color">
-                            Работаю с разными форматами. Могу написать письма для<br> 
+                            Работаю с разными форматами. Могу написать письма для<br>
                             рассылки, сделать прототип лендинга или написать статью.
                         </div>
+                        <div class="text__secondary__color__mobile">
+                            Работаю с разными форматами.<br>
+                            Могу написать письма для<br>
+                            рассылки, сделать прототип<br>
+                            лендинга или написать статью.
+                        </div>
                         <div class="text__main__color">
-                            Например, я писал тест для лид-магнита<br> 
+                            Например, я писал тест для лид-магнита<br>
                             в Webinar Group, статьи в Тинькоф-Журнал.
+                        </div>
+                        <div class="text__main__color__mobile">
+                            Например, я писал тест для лид-<br>
+                            магнита в Webinar Group, статьи в<br>
+                            Тинькоф-Журнал.
                         </div>
                     </div>
                 </div>
@@ -118,16 +164,35 @@
                     <img src="./img/conferention.jpg" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">
-                            Выступаю на конференциях<br> 
+                            Выступаю на конференциях<br>
                             и провожу мастер-классы
                         </h2>
+                        <h2 class="text__title__mobile">
+                            Выступаю на<br>
+                            конференциях<br>
+                            и провожу мастер-<br>
+                            классы
+                        </h2>
                         <div class="text__secondary__color">
-                            Выступал на Тургенев.Digital, Риф-Воронеж. Проводил<br> 
+                            Выступал на Тургенев.Digital, Риф-Воронеж. Проводил<br>
                             мастер-класс для COMDI. Вел лекции и практику в<br>
                             «Синергии», делал вебинары в агентстве SEMANTICA.
                         </div>
+                        <div class="text__secondary__color__mobile">
+                            Выступал на Тургенев.Digital,<br>
+                            Риф-Воронеж. Проводил мастер-<br>
+                            класс для COMDI. Вел лекции и<br>
+                            практику в «Синергии», делал<br>
+                            вебинары в агентстве SEMANTICA.
+                        </div>
                         <div class="text__main__color">
-                            Все записи выкладываю на <a class="activity__link" href="https://www.youtube.com/@FreudMethod">свой YouTube-канал.</a>
+                            Все записи выкладываю на <a class="activity__link"
+                                href="https://www.youtube.com/@FreudMethod">свой YouTube-канал.</a>
+                        </div>
+                        <div class="text__main__color__mobile">
+                            Все записи выкладываю на <a class="activity__link"
+                                href="https://www.youtube.com/@FreudMethod">свой<br>
+                                YouTube-канал.</a>
                         </div>
                     </div>
                 </div>
@@ -135,13 +200,28 @@
                     <img src="./img/consulting.jpg" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Консультирую и помогаю учиться</h2>
+                        <h2 class="text__title__mobile">
+                            Консультирую и помогаю<br>
+                            учиться
+                        </h2>
                         <div class="text__secondary__color">
-                            Помогаю развиваться в своей профессии. Даю обратную<br> 
+                            Помогаю развиваться в своей профессии. Даю обратную<br>
                             связь, отвечаю на вопросы и рассказываю про свой опыт.
                         </div>
+                        <div class="text__secondary__color__mobile">
+                            Помогаю развиваться в своей<br>
+                            профессии. Даю обратную связь,<br>
+                            отвечаю на вопросы и<br>
+                            рассказываю про свой опыт.
+                        </div>
                         <div class="text__main__color">
-                            Узнать про консультации можно у меня <a class="activity__link" href="#">напрямую</a>,<br> 
+                            Узнать про консультации можно у меня <a class="activity__link" href="#">напрямую</a>,<br>
                             а можно через <a class="activity__link" href="#">Solvery.</a>
+                        </div>
+                        <div class="text__main__color__mobile">
+                            Узнать про консультации можно у<br>
+                            меня <a class="activity__link" href="#">напрямую</a>, а можно через<br>
+                            <a class="activity__link" href="#">Solvery.</a>
                         </div>
                     </div>
                 </div>
@@ -149,13 +229,24 @@
                     <img src="./img/blog.jpg" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Веду свой блог</h2>
+                        <h2 class="text__title__mobile">Веду свой блог</h2>
                         <div class="text__secondary__color">
-                            Иногда пишу статьи про контент-маркетинг и редактуру,<br> 
-                            иногда делаю заметки про работу. 
+                            Иногда пишу статьи про контент-маркетинг и редактуру,<br>
+                            иногда делаю заметки про работу.
+                        </div>
+                        <div class="text__secondary__color__mobile">
+                            Иногда пишу статьи про контент-<br>
+                            маркетинг и редактуру, иногда<br>
+                            делаю заметки про работу.
                         </div>
                         <div class="text__main__color">
                             А ещё веду «проекты для души».<br>
-                            Например, телеграм-канал <a class="activity__link" href="#">«Записки в лаваше».</a>                       
+                            Например, телеграм-канал <a class="activity__link" href="#">«Записки в лаваше».</a>
+                        </div>
+                        <div class="text__main__color__mobile">
+                            А ещё веду «проекты для души».<br>
+                            Например, телеграм-канал<br>
+                            <a class="activity__link" href="#">«Записки в лаваше».</a>
                         </div>
                     </div>
                 </div>
@@ -175,8 +266,24 @@
                 </div>
                 <h2><a class="contacts__mail" href="#">mail@example.com</a></h2>
             </div>
+            <div class="contacts__mobile">
+                <h1 class="title__contacts">Контакты</h1>
+                <div class="contacts__block">
+                    <div class="contacts__links">
+                        <a href="#"><img src="./img/youtube.svg" alt="YouTube" width="50" height="50"></a>
+                        <a href="#"><img src="./img/telegram.svg" width="50" height="50"></a>
+                        <a href="#"><img src="./img/f.svg" width="50" height="50"></a>
+                        <a href="#"><img src="./img/t.svg" width="50" height="50"></a>
+                    </div>
+                    <h2><a class="contacts__mail" href="#">mail@example.com</a></h2>
+                </div>
+            </div>
             <div class="contacts__note">
                 *Meta признана экстремистской организацией
+            </div>
+            <div class="contacts__note__mobile">
+                *Meta признана экстремистской<br>
+                организацией
             </div>
         </div>
     </div>
