--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </h1>
             <div class="activity">
                 <div class="activity__block">
-                    <img src="./img/process.jpg" width="360" height="360">
+                    <img src="./img/process.png" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Выстраиваю редакции и процессы</h2>
                         <h2 class="text__title__mobile">
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="activity__block">
-                    <img src="./img/analysis.jpg" width="360" height="360">
+                    <img src="./img/analysis.png" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">
                             Пишу, редактирую и анализирую контент
@@ -205,7 +205,7 @@
                     </div>
                 </div>
                 <div class="activity__block">
-                    <img src="./img/conferention.jpg" width="360" height="360">
+                    <img src="./img/conferention.png" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">
                             Выступаю на конференциях<br>
@@ -241,7 +241,7 @@
                     </div>
                 </div>
                 <div class="activity__block">
-                    <img src="./img/consulting.jpg" width="360" height="360">
+                    <img src="./img/consulting.png" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Консультирую и помогаю учиться</h2>
                         <h2 class="text__title__mobile">
@@ -270,7 +270,7 @@
                     </div>
                 </div>
                 <div class="activity__block">
-                    <img src="./img/blog.jpg" width="360" height="360">
+                    <img src="./img/blog.png" width="360" height="360">
                     <div class="activity__text">
                         <h2 class="text__title">Веду свой блог</h2>
                         <h2 class="text__title__mobile">Веду свой блог</h2>
