--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Главная</title>
     <script>
         window.addEventListener("DOMContentLoaded", function () {
             const navMenuButton = document.querySelector("#nav__menu__open");
@@ -33,8 +33,8 @@
             <div class="menu__left">
                 <nav>
                     <ul class="main-nav">
-                        <li><a class="nav-item--active" href="#">ГЛАВНАЯ</a></li>
-                        <li><a class="nav-item" href="#">Портфолио</a></li>
+                        <li><a class="nav-item--active" href="./index.html">ГЛАВНАЯ</a></li>
+                        <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
                         <li><a class="nav-item" href="#">Услуги</a></li>
                         <li><a class="nav-item" href="#">Кейсы</a></li>
                         <li><a class="nav-item" href="#">Выступления</a></li>
@@ -61,8 +61,8 @@
                     </div>
                     <nav class="nav__desktop">
                         <ul>
-                            <li><a class="nav-active" href="#">ГЛАВНАЯ</a></li>
-                            <li><a href="#">Портфолио</a></li>
+                            <li><a class="nav-active" href="./index.html">ГЛАВНАЯ</a></li>
+                            <li><a href="./portfolio.html">Портфолио</a></li>
                             <li><a href="#">Услуги</a></li>
                             <li><a href="#">Кейсы</a></li>
                             <li><a href="#">Выступления</a></li>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="contacts__img">
                     <a href="#"><img src="./img/youtube.svg" width="44" height="44"></a>
-                    <a href="#"><img src="./img/telegram.svg" width="44" height="44"></a>
+                    <a href="https://t.me/lava_sh"><img src="./img/telegram.svg" width="44" height="44"></a>
                     <a href="#"><img src="./img/f.svg" width="44" height="44"></a>
                     <a href="#"><img src="./img/t.svg" width="44" height="44"></a>
                 </div>
@@ -315,7 +315,7 @@
                 <div class="contacts__block">
                     <div class="contacts__links">
                         <a href="#"><img src="./img/youtube.svg" alt="YouTube" width="50" height="50"></a>
-                        <a href="#"><img src="./img/telegram.svg" width="50" height="50"></a>
+                        <a href="https://t.me/lava_sh"><img src="./img/telegram.svg" width="50" height="50"></a>
                         <a href="#"><img src="./img/f.svg" width="50" height="50"></a>
                         <a href="#"><img src="./img/t.svg" width="50" height="50"></a>
                     </div>
