--- a/cases.html
+++ b/cases.html
@@ -17,9 +17,9 @@
                     <nav>
                         <ul class="main-nav">
                             <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
-                            <li><a class="nav-item--active" href="./portfolio.html">Портфолио</a></li>
+                            <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
                             <li><a class="nav-item" href="#">Услуги</a></li>
-                            <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
+                            <li><a class="nav-item--active" href="./cases.html">Кейсы</a></li>
                             <li><a class="nav-item" href="#">Выступления</a></li>
                             <li><a class="nav-item" href="#">Блог</a></li>
                         </ul>
@@ -45,9 +45,9 @@
                         <nav class="nav__desktop">
                             <ul>
                                 <li><a href="./index.html">ГЛАВНАЯ</a></li>
-                                <li><a class="nav-active" href="./portfolio.html">Портфолио</a></li>
+                                <li><a href="./portfolio.html">Портфолио</a></li>
                                 <li><a href="#">Услуги</a></li>
-                                <li><a href="./cases.html">Кейсы</a></li>
+                                <li><a class="nav-active" href="./cases.html">Кейсы</a></li>
                                 <li><a href="#">Выступления</a></li>
                                 <li><a href="#">Блог</a></li>
                             </ul>
@@ -72,7 +72,7 @@
             <div class="container">
                 <div class="portfolio__title">
                     <h1 class="portfolio">
-                        Портфолио
+                        Кейсы
                     </h1>
                     <div class="title__description">
                         На этой странице собраны мини-кейсы.<br>
