--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li><a class="nav-item--active" href="./index.html">ГЛАВНАЯ</a></li>
                         <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
                         <li><a class="nav-item" href="#">Услуги</a></li>
-                        <li><a class="nav-item" href="#">Кейсы</a></li>
+                        <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
                         <li><a class="nav-item" href="#">Выступления</a></li>
                         <li><a class="nav-item" href="#">Блог</a></li>
                     </ul>
@@ -64,17 +64,17 @@
                             <li><a class="nav-active" href="./index.html">ГЛАВНАЯ</a></li>
                             <li><a href="./portfolio.html">Портфолио</a></li>
                             <li><a href="#">Услуги</a></li>
-                            <li><a href="#">Кейсы</a></li>
+                            <li><a href="./cases.html">Кейсы</a></li>
                             <li><a href="#">Выступления</a></li>
                             <li><a href="#">Блог</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="contacts__img">
-                    <a href="#"><img src="./img/youtube.svg" width="44" height="44"></a>
-                    <a href="https://t.me/lava_sh"><img src="./img/telegram.svg" width="44" height="44"></a>
-                    <a href="#"><img src="./img/f.svg" width="44" height="44"></a>
-                    <a href="#"><img src="./img/t.svg" width="44" height="44"></a>
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44" height="44"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
                 </div>
                 <div class="menu__burger">
                     <button class="menu__button" id="nav__menu__open">
@@ -165,11 +165,11 @@
                         </div>
                         <div class="text__main__color">
                             Например, я собрал редакцию для блога Webinar Group.<br>
-                            О крупных проектах <a class="activity__link" href="#">рассказываю в кейсах.</a>
+                            О крупных проектах <a class="activity__link" href="./cases.html">рассказываю в кейсах.</a>
                         </div>
                         <div class="text__main__color__mobile">
                             Например, я собрал редакцию для блога Webinar Group.<br>
-                            О крупных проектах <a class="activity__link" href="#">рассказываю в кейсах.</a>
+                            О крупных проектах <a class="activity__link" href="./cases.html">рассказываю в кейсах.</a>
                         </div>
                     </div>
                 </div>
@@ -259,13 +259,13 @@
                             рассказываю про свой опыт.
                         </div>
                         <div class="text__main__color">
-                            Узнать про консультации можно у меня <a class="activity__link" href="#">напрямую</a>,<br>
-                            а можно через <a class="activity__link" href="#">Solvery.</a>
+                            Узнать про консультации можно у меня <a class="activity__link" href="https://t.me/freud_cat">напрямую</a>,<br>
+                            а можно через <a class="activity__link" href="https://solvery.io/ru/mentor/9396">Solvery.</a>
                         </div>
                         <div class="text__main__color__mobile">
                             Узнать про консультации можно у<br>
-                            меня <a class="activity__link" href="#">напрямую</a>, а можно через<br>
-                            <a class="activity__link" href="#">Solvery.</a>
+                            меня <a class="activity__link" href="https://t.me/freud_cat">напрямую</a>, а можно через<br>
+                            <a class="activity__link" href="https://solvery.io/ru/mentor/9396">Solvery.</a>
                         </div>
                     </div>
                 </div>
@@ -285,12 +285,12 @@
                         </div>
                         <div class="text__main__color">
                             А ещё веду «проекты для души».<br>
-                            Например, телеграм-канал <a class="activity__link" href="#">«Записки в лаваше».</a>
+                            Например, телеграм-канал <a class="activity__link" href="https://t.me/lava_sh">«Записки в лаваше».</a>
                         </div>
                         <div class="text__main__color__mobile">
                             А ещё веду «проекты для души».<br>
                             Например, телеграм-канал<br>
-                            <a class="activity__link" href="#">«Записки в лаваше».</a>
+                            <a class="activity__link" href="https://t.me/lava_sh">«Записки в лаваше».</a>
                         </div>
                     </div>
                 </div>
@@ -303,23 +303,23 @@
             <div class="contacts">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__links">
-                    <a href="#"><img src="./img/youtube.svg" alt="YouTube" width="68" height="68"></a>
-                    <a href="#"><img src="./img/telegram.svg" width="68" height="68"></a>
-                    <a href="#"><img src="./img/f.svg" width="68" height="68"></a>
-                    <a href="#"><img src="./img/t.svg" width="68" height="68"></a>
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68" height="68"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
                 </div>
-                <h2><a class="contacts__mail" href="#">mail@example.com</a></h2>
+                <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
             </div>
             <div class="contacts__mobile">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__block">
                     <div class="contacts__links">
-                        <a href="#"><img src="./img/youtube.svg" alt="YouTube" width="50" height="50"></a>
-                        <a href="https://t.me/lava_sh"><img src="./img/telegram.svg" width="50" height="50"></a>
-                        <a href="#"><img src="./img/f.svg" width="50" height="50"></a>
-                        <a href="#"><img src="./img/t.svg" width="50" height="50"></a>
+                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="50" height="50"></a>
+                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
+                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
+                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
                     </div>
-                    <h2><a class="contacts__mail" href="#">mail@example.com</a></h2>
+                    <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
                 </div>
             </div>
             <div class="contacts__note">
