add cases article

--- a/cases-article.html
+++ b/cases-article.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
     <script src="./js/script.js"></script>
-    <title>Кейсы</title>
+    <title>Статья</title>
 </head>
 
 <body>
@@ -72,84 +72,81 @@
     </div>
 
     <div class="row">
+        <img class="cases__main__image" src="./img/Mask group.png" width="1570" height="400">
+        <img class="cases__main__image__mobile" src="./img/Mask group main mobile.png" width="360" height="210">
         <div class="container">
-            <div class="portfolio__title">
-                <h1 class="portfolio">
-                    Кейсы
-                </h1>
-                <div class="title__description">
-                    На этой странице собраны мини-кейсы.<br>
-                    Это небольшие разовые задачи, которые я решал.<br>
-                    По ним можно посмотреть, как я пишу статьи, беру<br>
-                    интервью или делаю посадочные страницы.
-                </div>
-                <div class="title__description__mobile">
-                    На этой странице собраны<br>
-                    мини-кейсы.<br>
-                    Это небольшие разовые<br>
-                    задачи, которые я решал.<br>
-                    По ним можно посмотреть, как<br>
-                    я пишу статьи, беру интервью<br>
-                    или делаю посадочные<br>
-                    страницы.
-                </div>
+            <div class="recall__link">
+                <a href="./cases.html">← Назад к кейсам</a>
             </div>
         </div>
     </div>
 
-    <div class="row row-alternative-color">
+    <div class="row">
         <div class="container">
-            <div class="portfolio__body">
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+            <div class="cases__body">
+                <div class="cases__text__block">
+                    <div class="portfolio cases__main__title">
+                        Подготовка методичек<br>
+                        для Webinar Group
                     </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
+                    <div class="cases__text">
+                        На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
+                        которые я решал. По ним можно посмотреть, как я пишу статьи, беру
+                        интервью или делаю посадочные страницы.
                     </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
+                    <div class="cases__title">
+                        О магазинах в Телеграм
                     </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
+                    <div class="cases__text secondary__color">
+                        На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
+                        которые я решал. По ним можно посмотреть, как я пишу статьи, беру
+                        интервью или делаю посадочные страницы. На этой странице собраны
+                        мини-кейсы. Это небольшие разовые задачи, которые я решал. По ним
+                        можно посмотреть, как я пишу статьи, беру интервью или делаю посадочные
+                        страницы.
                     </div>
                 </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+                <div class="cases__image">
+                    <img src="./img/Mask group2.png" width="960" height="257">
+                </div>
+                <div class="cases__image__mobile">
+                    <img src="./img/Mask group mobile.png" width="340" height="200">
+                </div>
+                <div class="cases__text__block">
+                    <div class="cases__title">
+                        О магазинах в Телеграм
                     </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
+                    <div class="cases__text secondary__color">
+                        На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
+                        которые я решал. По ним можно посмотреть, как я пишу статьи, беру
+                        интервью или делаю посадочные страницы. На этой странице собраны
+                        мини-кейсы. Это небольшие разовые задачи, которые я решал. По ним
+                        можно посмотреть, как я пишу статьи, беру интервью или делаю посадочные
+                        страницы.
                     </div>
                 </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
-                    </div>
+                <div class="cases__image">
+                    <img src="./img/Mask group2.png" width="960" height="257">
                 </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                <div class="cases__image__mobile">
+                    <img src="./img/Mask group mobile.png" width="340" height="200">
+                </div>
+                <div class="cases__text__block">
+                    <div class="cases__title">
+                        О магазинах в Телеграм
                     </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
+                    <div class="cases__text last secondary__color">
+                        На этой странице собраны мини-кейсы. Это небольшие разовые задачи,
+                        которые я решал. По ним можно посмотреть, как я пишу статьи, беру
+                        интервью или делаю посадочные страницы. На этой странице собраны
+                        мини-кейсы. Это небольшие разовые задачи, которые я решал. По ним
+                        можно посмотреть, как я пишу статьи, беру интервью или делаю посадочные
+                        страницы.
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="row">
