--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,180 +8,185 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
+    <script src="./js/script.js"></script>
     <title>Портфолио</title>
 </head>
+
 <body>
-    <body>
-        <div class="row header">
-            <div class="menu__mobile" style="display: none;">
-                <div class="menu__left">
-                    <nav>
-                        <ul class="main-nav">
-                            <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
-                            <li><a class="nav-item--active" href="./portfolio.html">Портфолио</a></li>
-                            <li><a class="nav-item" href="#">Услуги</a></li>
-                            <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
-                            <li><a class="nav-item" href="#">Выступления</a></li>
-                            <li><a class="nav-item" href="#">Блог</a></li>
+    <div class="row header">
+        <div class="menu__mobile" style="display: none;">
+            <div class="menu__left">
+                <nav>
+                    <ul class="main-nav">
+                        <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
+                        <li><a class="nav-item--active" href="./portfolio.html">Портфолио</a></li>
+                        <li><a class="nav-item" href="#">Услуги</a></li>
+                        <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
+                        <li><a class="nav-item" href="#">Выступления</a></li>
+                        <li><a class="nav-item" href="#">Блог</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="menu__right">
+                <button id="nav__menu__close" class="menu__button close__button">
+                    <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="2.68701" width="27.3715" height="3.8" transform="rotate(45 2.68701 0)"
+                            fill="#828282" />
+                        <rect x="0.831299" y="19.5566" width="27.3715" height="3.8"
+                            transform="rotate(-45 0.831299 19.5566)" fill="#828282" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <div class="container">
+            <header>
+                <div class="header__block">
+                    <div class="logo">
+                        <img src="./img/logo.svg" width="65" height="65">
+                    </div>
+                    <nav class="nav__desktop">
+                        <ul>
+                            <li><a href="./index.html">ГЛАВНАЯ</a></li>
+                            <li><a class="nav-active" href="./portfolio.html">Портфолио</a></li>
+                            <li><a href="#">Услуги</a></li>
+                            <li><a href="./cases.html">Кейсы</a></li>
+                            <li><a href="#">Выступления</a></li>
+                            <li><a href="#">Блог</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="menu__right">
-                    <button id="nav__menu__close" class="menu__button close__button">
-                        <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="2.68701" width="27.3715" height="3.8" transform="rotate(45 2.68701 0)"
-                                fill="#828282" />
-                            <rect x="0.831299" y="19.5566" width="27.3715" height="3.8"
-                                transform="rotate(-45 0.831299 19.5566)" fill="#828282" />
-                        </svg>
+                <div class="contacts__img">
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44"
+                            height="44"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
+                </div>
+                <div class="menu__burger">
+                    <button class="menu__button" id="nav__menu__open">
+                        <img class="burger" src="./img/burger.svg">
                     </button>
                 </div>
-            </div>
-            <div class="container">
-                <header>
-                    <div class="header__block">
-                        <div class="logo">
-                            <img src="./img/logo.svg" width="65" height="65">
-                        </div>
-                        <nav class="nav__desktop">
-                            <ul>
-                                <li><a href="./index.html">ГЛАВНАЯ</a></li>
-                                <li><a class="nav-active" href="./portfolio.html">Портфолио</a></li>
-                                <li><a href="#">Услуги</a></li>
-                                <li><a href="./cases.html">Кейсы</a></li>
-                                <li><a href="#">Выступления</a></li>
-                                <li><a href="#">Блог</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="contacts__img">
-                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44" height="44"></a>
-                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
-                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
-                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
-                    </div>
-                    <div class="menu__burger">
-                        <button class="menu__button" id="nav__menu__open">
-                            <img class="burger" src="./img/burger.svg">
-                        </button>
-                    </div>
-                </header>
+            </header>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="container">
+            <div class="portfolio__title">
+                <h1 class="portfolio">
+                    Портфолио
+                </h1>
+                <div class="title__description">
+                    На этой странице собраны мини-кейсы.<br>
+                    Это небольшие разовые задачи, которые я решал.<br>
+                    По ним можно посмотреть, как я пишу статьи, беру<br>
+                    интервью или делаю посадочные страницы.
+                </div>
+                <div class="title__description__mobile">
+                    На этой странице собраны<br>
+                    мини-кейсы.<br>
+                    Это небольшие разовые<br>
+                    задачи, которые я решал.<br>
+                    По ним можно посмотреть, как<br>
+                    я пишу статьи, беру интервью<br>
+                    или делаю посадочные<br>
+                    страницы.
+                </div>
             </div>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="container">
-                <div class="portfolio__title">
-                    <h1 class="portfolio">
-                        Портфолио
-                    </h1>
-                    <div class="title__description">
-                        На этой странице собраны мини-кейсы.<br>
-                        Это небольшие разовые задачи, которые я решал.<br>
-                        По ним можно посмотреть, как я пишу статьи, беру<br> 
-                        интервью или делаю посадочные страницы.
+    <div class="row row-alternative-color">
+        <div class="container">
+            <div class="portfolio__body">
+                <div class="portfolio__block">
+                    <div class="portfolio__image">
+                        <a href="#"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
                     </div>
-                    <div class="title__description__mobile">
-                        На этой странице собраны<br> 
-                        мини-кейсы.<br>
-                        Это небольшие разовые<br> 
-                        задачи, которые я решал.<br>
-                        По ним можно посмотреть, как<br> 
-                        я пишу статьи, беру интервью<br> 
-                        или делаю посадочные<br> 
-                        страницы.
+                    <div class="image__description">
+                        <a href="#">Подготовка методичек для Webinar Group</a>
+                    </div>
+                </div>
+                <div class="portfolio__block">
+                    <div class="portfolio__image">
+                        <a href="#"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
+                    </div>
+                    <div class="image__description">
+                        <a href="#">Статья для агентства Альтопромо</a>
+                    </div>
+                </div>
+                <div class="portfolio__block">
+                    <div class="portfolio__image">
+                        <a href="#"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                    </div>
+                    <div class="image__description">
+                        <a href="#">Статья для блога Академии MAED</a>
+                    </div>
+                </div>
+                <div class="portfolio__block">
+                    <div class="portfolio__image">
+                        <a href="#"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+                    </div>
+                    <div class="image__description">
+                        <a href="#">Подготовка методичек для Webinar Group</a>
+                    </div>
+                </div>
+                <div class="portfolio__block">
+                    <div class="portfolio__image">
+                        <a href="#"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
+                    </div>
+                    <div class="image__description">
+                        <a href="#">Статья для агентства Альтопромо</a>
+                    </div>
+                </div>
+                <div class="portfolio__block">
+                    <div class="portfolio__image">
+                        <a href="#"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                    </div>
+                    <div class="image__description">
+                        <a href="#">Статья для блога Академии MAED</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="row row-alternative-color">
-            <div class="container">
-                <div class="portfolio__body">
-                    <div class="portfolio__block">
-                        <div class="portfolio__image">
-                            <a href="#"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
-                        </div>
-                        <div class="image__description">
-                            <a href="#">Подготовка методичек для Webinar Group</a>
-                        </div>
-                    </div>
-                    <div class="portfolio__block">
-                        <div class="portfolio__image">
-                            <a href="#"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
-                        </div>
-                        <div class="image__description">
-                            <a href="#">Статья для агентства Альтопромо</a>
-                        </div>
-                    </div>
-                    <div class="portfolio__block">
-                        <div class="portfolio__image">
-                            <a href="#"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
-                        </div>
-                        <div class="image__description">
-                            <a href="#">Статья для блога Академии MAED</a>
-                        </div>
-                    </div>
-                    <div class="portfolio__block">
-                        <div class="portfolio__image">
-                            <a href="#"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
-                        </div>
-                        <div class="image__description">
-                            <a href="#">Подготовка методичек для Webinar Group</a>
-                        </div>
-                    </div>
-                    <div class="portfolio__block">
-                        <div class="portfolio__image">
-                            <a href="#"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
-                        </div>
-                        <div class="image__description">
-                            <a href="#">Статья для агентства Альтопромо</a>
-                        </div>
-                    </div>
-                    <div class="portfolio__block">
-                        <div class="portfolio__image">
-                            <a href="#"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
-                        </div>
-                        <div class="image__description">
-                            <a href="#">Статья для блога Академии MAED</a>
-                        </div>
-                    </div>
+    <div class="row">
+        <div class="container">
+            <div class="contacts">
+                <h1 class="title__contacts">Контакты</h1>
+                <div class="contacts__links">
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68"
+                            height="68"></a>
+                    <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
+                    <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
+                    <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
                 </div>
+                <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="container">
-                <div class="contacts">
-                    <h1 class="title__contacts">Контакты</h1>
+            <div class="contacts__mobile">
+                <h1 class="title__contacts">Контакты</h1>
+                <div class="contacts__block">
                     <div class="contacts__links">
-                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68" height="68"></a>
-                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
-                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
-                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
+                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube"
+                                width="50" height="50"></a>
+                        <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
+                        <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
+                        <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
                     </div>
                     <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
                 </div>
-                <div class="contacts__mobile">
-                    <h1 class="title__contacts">Контакты</h1>
-                    <div class="contacts__block">
-                        <div class="contacts__links">
-                            <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="50" height="50"></a>
-                            <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
-                            <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
-                            <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
-                        </div>
-                        <h2><a class="contacts__mail" href="mailto:davydov@freud-cat.ru">davydov@freud-cat.ru</a></h2>
-                    </div>
-                </div>
-                <div class="contacts__note">
-                    *Meta признана экстремистской организацией
-                </div>
-                <div class="contacts__note__mobile">
-                    *Meta признана экстремистской<br>
-                    организацией
-                </div>
+            </div>
+            <div class="contacts__note">
+                *Meta признана экстремистской организацией
+            </div>
+            <div class="contacts__note__mobile">
+                *Meta признана экстремистской<br>
+                организацией
             </div>
         </div>
+    </div>
 </body>
+
 </html>
